feat: minor dataframe construction adjustments

--- a/data/tabular/uniprot/process_dataset.ipynb
+++ b/data/tabular/uniprot/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "702d78bd-ba4b-4b47-8644-c62df4b21c0a",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import json\n",
     "from typing import Dict\n",
     "from urllib.request import urlopen \n",
-    "import regex as re"
+    "import regex as re\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "f859045f-031a-4fb3-8fcc-9b3b2340c729",
    "metadata": {},
    "outputs": [],
@@ -118,10 +119,11 @@
     "    sequence = json_dict[\"sequence\"][\"value\"]\n",
     "    sentences, reactions = extract_catalyzed_reactions(json_dict)\n",
     "    binding_sites = extract_binding_sites(json_dict)\n",
-    "    return {\"sequence\" : {sequence : {\n",
+    "    return {\"sequence\" : sequence,\n",
     "            \"reactions\" : '|'.join([str(i) for i in reactions]), \n",
+    "            \"sentences\" : sentences,\n",
     "            \"binding sites\" : ','.join([str(i) for i in binding_sites])\n",
-    "    }}}\n",
+    "    }\n",
     "    # except KeyError:\n",
     "    #     print(\"err\")"
    ]
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "845867c8-6457-4c3f-b359-e247f1d3c757",
    "metadata": {},
    "outputs": [],
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "3bb06419-8f01-4205-aa48-afebdfd68824",
    "metadata": {
     "scrolled": true
@@ -169,8 +171,11 @@
    "source": [
     "data = []\n",
     "\n",
-    "for prot_seq_json in proteins:\n",
-    "    data.append(extract_all(prot_seq_json))"
+    "for prot_id, prot_seq_json in enumerate(proteins):\n",
+    "    try:\n",
+    "        data.append({prot_id : extract_all(prot_seq_json)})\n",
+    "    except Exception:\n",
+    "        pass"
    ]
   },
   {
@@ -179,7 +184,92 @@
    "id": "1586f0d7-70ea-4bfe-b0e4-6800cbe3e435",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d295a250-d5e9-41fe-a3c4-84c47df9e5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import ChainMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f6a7b9f3-bb41-41ba-b283-547907d23fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data = dict(ChainMap(*data))\n",
+    "a = {}\n",
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "bcbc63f4-e586-4c1a-a5bf-4964161276d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dictionary in data:\n",
+    "    key = int(list(dictionary.keys())[0])\n",
+    "    value = list(dictionary.values())[0]\n",
+    "\n",
+    "    a[key] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b432cca1-5582-4f5e-9c70-6af37f425559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactions = [a[i][\"reactions\"] for i in list(a.keys())]\n",
+    "sequences = [a[i][\"sequence\"] for i in list(a.keys())]\n",
+    "sentences = [a[i][\"sentences\"] for i in list(a.keys())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2ccd268b-0902-45fe-89b1-6a83d2b3bcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "\n",
+    "df[\"sequence\"] = sequences\n",
+    "df[\"sentences\"] = sentences\n",
+    "df[\"reactions\"] = reactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "3666eb32-e26c-4a96-a37d-73e064d725ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"reactions_sentences.csv\")\n"
+   ]
   }
  ],
  "metadata": {
